# rust-experiments

./: Cargo.toml  README.md
data/: parquet-arrow-nav-sat-fix-20200318132301.parquet
parquet-arrow-print/: Cargo.toml
parquet-arrow-print/src/: main.rs
parquet-coord-transform-print/: Cargo.toml
parquet-coord-transform-print/src/: main.rs
parquet-datafusion/: Cargo.toml
parquet-datafusion/src/: main.rs
parquet-generator/: Cargo.toml
parquet-generator/src/: main.rs
parquet-print/: Cargo.toml
parquet-print/src/: main.rs
