[package]
name = "parquet-coord-transform-print"
version = "0.1.0"
authors = ["nick <nick.hortovanyi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parquet="^0.16.0"
arrow="^0.16.0"
chrono="^0.4.11"
coord_transforms="^1.2.2"
nalgebra="^0.21.0"