[package]
name = "parquet-print"
version = "0.1.0"
authors = ["nick <nick.hortovanyi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.parquet]
version = "^0.16.0"

[dependencies.arrow]
version = "^0.16.0"
# default-features = false